--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -257,7 +257,10 @@ a.button2:hover {
   padding-left: 910px;
 }
 
-#contact_us {
+
+#main {
+  
+  #contact_us {
   float: left;
   width: 600px;
   margin: 30px 0px 10px 40px;
@@ -269,24 +272,31 @@ a.button2:hover {
   border-radius:10px;
   background-color:#ffffff;
       
-  #contact_form {
-    padding: 20px;
+    #contact_form {
+      padding: 20px;
       
-    td {
-      padding-right: 20px;
-    }
+      td {
+        padding-right: 20px;
+      }
     
-    #message_content, #admin_message_content {
-      width: 450px;
-      font-size: 10pt;
-    }
+      #message_content, #admin_message_content {
+        width: 450px;
+        font-size: 10pt;
+      }
+    
+      #error_explanation {
+        margin-left: 140px;
+      }
       
-    #submit {
-      float:left;
-      margin: 20px 0px 20px 200px;
+      #submit {
+        float:left;
+        margin: 20px 0px 20px 200px;
+      }
     }
   }
 }
+
+
 
 #bottombar {
   width:950px;
