--- a/app/views/current_bps/landing_page.html.erb
+++ b/app/views/current_bps/landing_page.html.erb
@@ -54,14 +54,14 @@
 				
 			<h4>What about smoking?</h4>
 				<p>You may be amazed to find that there is no direct link between smoking and high blood pressure. However smoking does make you more at risk of heart attacks and strokes.</p>
-				<p>The single best thing that you can do to make you live longer is to stop smoking. You will find links to helpful sites on our links page.</p>
+				<p>The single best thing that you can do to make you live longer is to stop smoking.</p>
 				
 			<h3>Complementary Medicine</h3>
 				<p>You may wish to try supplements to control your blood pressure. Unfortunately calcium and magnesium supplements have not been shown to have a clinically significant effect on your blood pressure. And contrary to popular belief, potassium supplements have no effect on your blood pressure at all.</p>
 			
 			<%= image_tag("relaxation_small.jpg", :class => "picture_left") %>
 			<h4>Would relaxation therapy or meditation help me?</h4>
-				<p>You may like to try relaxation therapy or meditation to lower your blood pressure. Many people find these beneficial. They are not routinely available on the NHS so you will have to find a private supplier. You will find them on our links page.</p>
+				<p>You may like to try relaxation therapy or meditation to lower your blood pressure. Many people find these beneficial. They are not routinely available on the NHS so you will have to find a private supplier.</p>
 			
 			<h4>How about acupuncture?</h4>
 				<p>You may wish to try acupuncture to see if it helps with your blood pressure. However at the moment there is a lack of good quality research showing whether it is helpful or not.</p>
