--- a/app/views/notifier/sign_up.text.erb
+++ b/app/views/notifier/sign_up.text.erb
@@ -6,9 +6,9 @@ You have taken the first step to taking control of your own blood pressure...
 
 Please go to HomeBloodPressure.co.uk to take <%= @a_another_reading %> pair of blood pressure readings <%= @when_next_reading %>.
 
-By using HomeBloodPressure.co.uk, you’ll be able to measure your own blood pressure at home. You’ll have a safe place to store the readings. You’ll be able to see when your next reading is due. You’ll be able to see whether your blood pressure needs treating. And you’ll be able to do it at a time and place that suits you…
+By using HomeBloodPressure.co.uk, you’ll be able to measure your own blood pressure at home. You’ll have a safe place to store the readings. You’ll be able to see when your next reading is due. You’ll know whether your blood pressure needs treating. And you’ll be able to do it at a time and place that suits you…
 
-If you do decide that your blood pressure needs to be treated then you’ll have the option to use our easy to use prescription delivery service. This will help you to choose the right medication for you. Once you have chosen your medication, you’ll be able to get a prescription delivered to your door.
+If you decide that your blood pressure needs to be treated then you can take advantage of our easy to use prescription delivery service. This will help you to choose the right medication for you. Once you have chosen your medication, you’ll be able to get a prescription delivered to your door.
 
 To get started, the first thing you need to do is to take some more blood pressure readings. You need to take readings over at least 4 days. This will give you a more accurate picture of what your blood pressure is actually doing.
 
