--- a/app/views/static_pages/tac.html.erb
+++ b/app/views/static_pages/tac.html.erb
@@ -1,4 +1,4 @@
-<div id='main_full_width'>
+<div id='main'>
 	<div id='tac'>
 	<h1>Terms and Conditions</h1>
 	<p>By using this service you are confirming that you understand and agree to be legally bound by these Terms and Conditions.</p>
