--- a/app/views/current_bps/display_bp.html.erb
+++ b/app/views/current_bps/display_bp.html.erb
@@ -23,8 +23,8 @@
 		<p><%= @average_bp_message %></p>
 	<% end %>
 	
-	<p>...However, to get a more accurate picture of what your blood pressure is like you need to take more readings like this over the next 4 days. This is because your blood pressure will vary from hour to hour and day to day, so one or two readings can be misleading. By taking more readings, you will get more accurate advice from this site.</p>
-	<p>Some illnesses may also affect what is considered to be a healthy blood pressure. After taking some readings you may need to answer more questions about your health. By doing this you will get more accurate, personalised advice.</p>
+	<p>...However, to get a more accurate picture of what your blood pressure is like you need to take more readings like this over the next 4 days. This is because your blood pressure will vary from hour to hour, so one or two readings can be misleading. By taking more readings, you will get more accurate advice from this site.</p>
+	<!--<p>Some illnesses may also affect what is considered to be a healthy blood pressure. After taking some readings you may need to answer more questions about your health. By doing this you will get more accurate, personalised advice.</p>-->
 	
 	<% if !user_signed_in? %>
 		<p>Sign up so you can check your blood pressure over the next 4 days.</p>
@@ -34,9 +34,11 @@
 		</div>
 		
 		<div id='sign_up_benefits'>
-			<p>You will receive free personalised advice on how best to control your blood pressure.</p>
-			<p>You will receive advice on all aspects of controlling your blood pressure from lifestyle changes through to medications.</p>
-			<p>If you need to take medication, then you can use our service to receive it. You’ll find out just how cheap and easy it is to manage your own blood pressure and get prescriptions delivered to your door.</p>
+			<ul>
+				<li>You will receive free personalised advice on how best to control your blood pressure.</li>
+				<li>If you need to take medication, then you can choose to use our service to receive it. You’ll find out just how cheap and easy it is to get prescriptions delivered to your door.</li>
+				<li>You won't waste any more time waiting at the doctor's.</li>
+			</ul>
 		</div>
 		
 	<% end %>
