--- a/app/views/notifier/sign_up.html.erb
+++ b/app/views/notifier/sign_up.html.erb
@@ -19,9 +19,9 @@
       text-align: center;
       font-size:12pt;'>Please go to <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %> to take <%= @a_another_reading %> pair of blood pressure readings <span style='font-weight: bold;'><%= @when_next_reading %></span>.</p>
 
-<p style='margin: 10px 45px 0px 25px;'>By using <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %>, you’ll be able to measure your own blood pressure at home. You’ll have a safe place to store the readings. You’ll be able to see when your next reading is due. You’ll be able to see whether your blood pressure needs treating. And you’ll be able to do it at a time and place that suits you…</p>
+<p style='margin: 10px 45px 0px 25px;'>By using <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %>, you’ll be able to measure your own blood pressure at home. You’ll have a safe place to store the readings. You’ll be able to see when your next reading is due. You’ll know whether your blood pressure needs treating. And you’ll be able to do it at a time and place that suits you…</p>
 
-<p style='margin: 10px 45px 0px 25px;'>If you do decide that your blood pressure needs to be treated then you’ll have the option to use our easy to use prescription delivery service. This will help you to choose the right medication for you. Once you have chosen your medication, you’ll be able to get a prescription delivered to your door.</p>
+<p style='margin: 10px 45px 0px 25px;'>If you decide that your blood pressure needs to be treated then you can take advantage of our easy to use prescription delivery service. This will help you to choose the right medication for you. Once you have chosen your medication, you’ll be able to get a prescription delivered to your door.</p>
 
 <p style='margin: 10px 45px 0px 25px;'>To get started, the first thing you need to do is to take some more blood pressure readings. You need to take readings over at least 4 days. This will give you a more accurate picture of what your blood pressure is actually doing.</p>
 
