add contact us link to sign up email

--- a/app/views/notifier/sign_up.html.erb
+++ b/app/views/notifier/sign_up.html.erb
@@ -36,7 +36,7 @@
       text-align: center;
       font-size:12pt;'>So, <span style='font-weight: bold;'><%= @when_next_reading %></span>, please go to <%= link_to 'HomeBloodPressure.co.uk', new_user_session_url %> to take <%= @a_another_reading %> pair of blood pressure readings.</p>
 
-<p style='margin: 10px 45px 0px 25px;'>If you have any questions for us, we’d love to hear from you.</p>
+<p style='margin: 10px 45px 0px 25px;'>If you have any questions for us, we’d love to hear from you. Please <%= link_to 'contact us here', new_message_url %>.</p>
 
 <p style='margin: 10px 45px 0px 25px;'>Dr Colin Coulthard and Dr Richard Thomas - <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %> founders.</p>
 
