--- a/app/views/current_bps/display_bp.html.erb
+++ b/app/views/current_bps/display_bp.html.erb
@@ -16,7 +16,7 @@
 	<% end %>
 	
 	<% if user_signed_in? %>
-		<p class='big_notice'>Please come back to HomeBloodPressure.co.uk to take another pair of readings <span><%= @when_next_reading %></span>.</p>
+		<p class='big_notice'>Please come back to HomeBloodPressure.co.uk <span><%= @when_next_reading %></span> to take another pair of blood pressure readings.</p>
 	<% end %>
 	
 	<% if !@warning_message %>
