--- a/app/views/current_bps/display_bp.html.erb
+++ b/app/views/current_bps/display_bp.html.erb
@@ -1,7 +1,7 @@
 <div id='main'>
 	<h1>Is my blood pressure too high?</h1>
 	
-	<div id='average_bp_container'>
+	<div id='right_side_boxes_container'>
 	<% if !@average_sysbp.nil? %>
 		<div id='average_bp'>
 			<%= render :partial => 'average_bp', :locals => {:avsys => @average_sysbp, :avdia => @average_diabp, :bppos => @bp_position} %>
@@ -16,7 +16,7 @@
 	<% end %>
 	
 	<% if user_signed_in? %>
-		<p class='big_notice'>Please come back to HomeBloodPressure.co.uk to take another pair of readings <span><%= @when_next_reading %></span>.</p>
+		<p class='big_notice'>Please come back to HomeBloodPressure.co.uk <span><%= @when_next_reading %></span> to take another pair of blood pressure readings.</p>
 	<% end %>
 	
 	<% if !@warning_message %>
