--- a/app/views/current_bps/new2.html.erb
+++ b/app/views/current_bps/new2.html.erb
@@ -1,7 +1,7 @@
 <div id='main'>
 	<h1>Is my blood pressure too high?</h1>
 	
-	<div id='average_bp_container'>
+	<div id='right_side_boxes_container'>
 	<% if !@average_sysbp.nil? %>
 		<div id='average_bp'>
 			<%= render :partial => 'average_bp', :locals => {:avsys => @average_sysbp, :avdia => @average_diabp, :bppos => @bp_position} %>
