--- a/app/assets/stylesheets/current_bps.css.scss
+++ b/app/assets/stylesheets/current_bps.css.scss
@@ -51,7 +51,7 @@ h1 {
     }
     
     p.big_notice {
-      width: 400px;
+      width: 450px;
       margin-left:100px;
       padding: 5px 10px 5px 10px;
       border-style:solid;
@@ -196,9 +196,9 @@ h1 {
       color: #ff0000;
     }
     
-    #average_bp_container {
+    #right_side_boxes_container {
       width: 200px;
-      height: 300px;
+      height: 500px;
       margin: 0px 40px 20px 40px;
       float: right;
     
@@ -206,7 +206,7 @@ h1 {
         position: relative;
         float: right;
         width: 100%;
-        height: 100%;
+        height: 300px;
         border-style:solid;
         border-width:2px;
         border-color:#033076;
@@ -463,9 +463,9 @@ h1 {
       border-radius:7px;
       background-color:#033076;
       color:#ffffff;
-      font-size: 16pt;
+      font-size: 14pt;
       text-align: center;
-      padding: 8px;
+      padding: 5px 8px 8px 8px;
     }
 
 #input_bp_boxes {
