more work on logic for gathering BPs

--- a/app/views/account/_reading_counter.html.erb
+++ b/app/views/account/_reading_counter.html.erb
@@ -6,7 +6,7 @@
 
 <div id='reading_counter_bar'>
 	<% 8.times do |x| %>
-		<% if (x+1) <= @set_average_bp_count %>
+		<% if (x+1) <= @batch_average_bp_count %>
 			<div class='reading_taken'>
 				<%= (x+1) %>
 			</div>
