--- a/app/views/current_bps/new.html.erb
+++ b/app/views/current_bps/new.html.erb
@@ -8,9 +8,13 @@
 		</div>
 	<% end %>
 	</div>
-
-	<p>Provide us with some blood pressure readings and we'll answer that question right away!</p><br />
-	<p>Whilst seated and relaxed, please take a blood pressure reading for us now and enter it in the boxes below:</p>
+	
+	<% if session[:old_bp_text] == "" %>
+		<p>Provide us with some blood pressure readings and we'll answer that question right away!</p><br />
+		<p>Whilst seated and relaxed, please take a blood pressure reading for us now and enter it in the boxes below:</p>
+	<% else %>
+		<p>Please enter the first blood pressure reading from <%= session[:old_bp_text] %> into the boxes below:</p>
+	<% end %>
 	
 	<div id='wizard_input_bp'>	
 		<%= render 'form' %>
