drug refs removed for google

--- a/app/assets/stylesheets/current_bps.css.scss
+++ b/app/assets/stylesheets/current_bps.css.scss
@@ -86,7 +86,8 @@ h1 {
       font-weight: bold;
       padding: 5px 40px 5px 40px;
       background-color: #033076;
-      display: inline;
+      width: 230px;
+      //display: inline;
     }
     
     #wizard_input_bp {
