re-organised logic for defining date and ampm for old bps, moved some stuff to helpers

--- a/app/views/account/home.html.erb
+++ b/app/views/account/home.html.erb
@@ -6,18 +6,45 @@
 		<div id='average_bp'>
 			<%= render :partial => 'average_bp', :locals => {:avsys => @average_sysbp, :avdia => @average_diabp, :bppos => @bp_position} %>
 		</div>
-		<div id='reading_counter'>
-			<%= render :partial => 'reading_counter' %>
-		</div>	
+		<% if user_signed_in? %>
+			<div id='reading_counter'>
+				<%= render :partial => 'reading_counter' %>
+			</div>
+		<% end %>	
 	<% end %>
 	</div>
 	
-	<p class='big_notice'>Please come back to HomeBloodPressure.co.uk <span><%= @when_next_reading %></span> to take another pair of blood pressure readings.</p>
-
-	<p><%= @average_bp_message %></p>
+	<% if @warning_message %>
+		<p id='warning_msg'><%= @warning_message %></p>
+	<% end %>
+	
+	<% if user_signed_in? %>
+		<p class='big_notice'>Please come back to HomeBloodPressure.co.uk <span><%= @when_next_reading %></span> to take another pair of blood pressure readings.</p>
+	<% end %>
+	
+	<% if !@warning_message %>
+		<p><%= @average_bp_message %></p>
+	<% end %>
 	
 	<p>...However, to get a more accurate picture of what your blood pressure is like you need to take more readings like this over the next 4 days. This is because your blood pressure will vary from hour to hour, so one or two readings can be misleading. By taking more readings, you will get more accurate advice from this site.</p>
 	<!--<p>Some illnesses may also affect what is considered to be a healthy blood pressure. After taking some readings you may need to answer more questions about your health. By doing this you will get more accurate, personalised advice.</p>-->
+	
+	<% if !user_signed_in? %>
+		<p>Sign up so you can check your blood pressure over the next 4 days.</p>
+		
+		<div id='sign_up_partial'>
+			<%= render :partial => 'devise/registrations/new' %>
+		</div>
+		
+		<div id='sign_up_benefits'>
+			<ul>
+				<li>You will receive free personalised advice on how best to control your blood pressure.</li>
+				<li>If you need to take medication, then you can choose to use our service to receive it. You’ll find out just how cheap and easy it is to get prescriptions delivered to your door.</li>
+				<li>You won't waste any more time waiting at the doctor's.</li>
+			</ul>
+		</div>
+		
+	<% end %>
 	
 </div>
 
