--- a/app/views/account/readings_due.html.erb
+++ b/app/views/account/readings_due.html.erb
@@ -26,7 +26,7 @@
 	<% if old_bp_datetime == "" %>
 		<%= link_to 'Next', new_current_bps_path %>
 	<% else %>
-		<p>Do you have a pair of blood pressure readings from <%= old_bp_datetime %> that you need to enter into your account?</p>
+		<p>Some blood pressure readings are overdue. You can enter these into your account now if you have made a note of them. It is important to take a pair of blood pressure readings every morning and evening for 4 days. This set of readings must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of whether your blood pressure is too high. Do you have a pair of blood pressure readings from <%= old_bp_datetime %> that you need to enter into your account?</p>
 		<%= link_to 'No', is_bp_set_completable_path %>
 		<%= link_to 'Yes', new_current_bps_path %>
 	<% end %>
