--- a/app/views/current_bps/new.html.erb
+++ b/app/views/current_bps/new.html.erb
@@ -13,7 +13,7 @@
 		<p>Provide us with some blood pressure readings and we'll answer that question right away!</p><br />
 		<p>Whilst seated and relaxed, please take a blood pressure reading for us now and enter it in the boxes below:</p>
 	<% else %>
-		<p>Please enter the first blood pressure reading from <%= old_bp_date_time %> into the boxes below:</p>
+		<p>Please enter the first blood pressure reading from <%= old_bp_datetime %> into the boxes below:</p>
 	<% end %>
 	
 	<div id='wizard_input_bp'>	
