--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -15,7 +15,7 @@
 	<div id='header'>
 		<%= image_tag "topbanner.jpg" %>
 		<div id='topbannertitle'>
-			<%= link_to("HomeBloodPressure.co.uk", blood_pressure_treatment_path) %>
+			<%= link_to("HomeBloodPressure.co.uk", root_path) %>
 		</div>
 	</div>
 	
@@ -31,7 +31,7 @@
 			<a href=''>My medical details</a>
 		</div>
 		<div class='topmenucontent'>
-			<%= link_to 'My blood pressure readings', router_current_bps_path %>
+			<a href=''>My blood pressure readings</a>
 		</div>
 		<div class='topmenucontent'>
 			<a href=''>My blood test results</a>
