basic seo tweaks and new favicon

--- a/app/views/current_bps/landing_page.html.erb
+++ b/app/views/current_bps/landing_page.html.erb
@@ -1,12 +1,12 @@
 <div id='main'>
 	<div id='landing_page_bp_treatment'>
 		<div id='heart_bp_monitor_pic'>
-			<%= image_tag("heart_bp_monitor_small.jpg", size: '150x120') %>
+			<%= image_tag("heart_bp_monitor_small.jpg", size: '150x120', :alt => "blood pressure treatment") %>
 		</div>
 		
 		<div id='questions'>
 			<div id='q1'><h3>Are you worried about your blood pressure?</h3></div>
-			<div id='q2'><h3>Do you want to know the best way to treat it?</h3></div>
+			<div id='q2'><h3>Do you want to know the best blood pressure treatment?</h3></div>
 			<div id='q3'><h3>Are you worried about side effects from blood pressure</h3></div>
 			<div id='q4'><h3>medication?</h3></div>
 		</div>
@@ -26,8 +26,8 @@
 			<h2>If so, you've come to the right place...</h2>
 			
 			<p class='more_space'>To make things simple we’ve broken the advice down into three broad groups...</p>
-			<p class='more_space'>First comes information about the lifestyle changes that you can make in order to lower your blood pressure and lead a healthier life. Second is information about complementary healthcare treatments that you may have considered using, such as supplements or acupuncture.</p>
-			<p class='more_space'>And finally is information about the different medications that you might be prescribed by your doctor, or even better, that you may choose to have prescribed yourself, through our easy to use service.</p>
+			<p class='more_space'>First comes information about the lifestyle changes that you can make in order to lower your blood pressure and lead a healthier life. Second is information about complementary healthcare blood pressure treatments that you may have considered using, such as supplements or acupuncture.</p>
+			<p class='more_space'>And finally is information about the different blood pressure treatments that you might be prescribed by your doctor, or even better, that you may choose to have prescribed yourself, through our easy to use service.</p>
 		
 			<h3>Lifestyle</h3>
 				<p>Are you one of the many people who’ve been told at some point that you need to change your lifestyle for the better? Have you found the advice confusing and contradictory?</p>
