--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>HomeBloodPressure.co.uk</title>
+  <title>Blood pressure treatment HomeBloodPressure.co.uk</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <meta name="description" content="Is your blood pressure too high? Blood pressure treatment at home. No more time waiting at the doctor's." />
   
   <!-- Google Analytics code -->
   <script>
