--- a/app/views/account/readings_due.html.erb
+++ b/app/views/account/readings_due.html.erb
@@ -12,23 +12,37 @@
 	<% end %>
 	</div>
 	
-	<% if session[:reading_counter] != nil %> <!-- This identifies if the user has already entered some readings during this session-->
+	<%= session[:date] %><br />
+	<%= session[:ampm] %><br />
+	<%= session[:date_for_bp_entry] %><br />
+	<%= session[:ampm_for_bp_entry] %><br />
+	<%= session[:average_bp_given] %><br />
+	<%= @bp_entry_datetime[:date] %><br />
+	<%= @bp_entry_datetime[:ampm] %>
+	
+	<% if session[:average_bp_given] == 'yes' %>
 		<p>Thank you for entering your recent blood pressure readings.</p>
-		<% if old_bp_datetime == "" %>
-			<p>Now it's time to take an up to date pair of readings.</p>
-		<% end %>
+	<% elsif session[:average_bp_given] == 'skipped' %>
+		<p>OK. It is important to try to take a pair of blood pressure readings every morning and evening for 4 days. Don't worry if you do miss some readings, but the set must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of your blood pressure so you will know if it is too high.</p>
 	<% else %>
 		<p>Welcome back <%= current_user.email %></p>
-	
-		<p>It's time to take some more readings to find out if your blood pressure really is too high. Taking a set of readings over several days will give you an accurate measure of your blood pressure. From an accurate measure you'll get reliable advice. That way you will know whether your blood pressure really is too high.</p>
+		<p>It's time to take some more blood pressure readings. Taking a set of readings over several days will give you an accurate measure of your blood pressure. From an accurate measure you'll get reliable advice. That way you will know whether your blood pressure really is too high.</p>
 	<% end %>
 	
-	<% if old_bp_datetime == "" %>
-		<%= link_to 'Next', new_current_bp_path %>
+	<% if @old_bp_datetime == "" && session[:average_bp_given] != nil %>
+		<p>Now it's time to take an up to date pair of readings.</p>
+	<% end %>
+	
+	<% if @old_bp_datetime == "" %>
+		<%= link_to 'Next', new_current_bp_path(@bp_entry_datetime) %>
 	<% else %>
-		<p>Some blood pressure readings are overdue. You can enter these into your account now if you have made a note of them. It is important to take a pair of blood pressure readings every morning and evening for 4 days. This set of readings must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of whether your blood pressure is too high. Do you have a pair of blood pressure readings from <%= old_bp_datetime %> that you need to enter into your account?</p>
-		<%= link_to 'No', account_is_bp_set_completable_path %>
-		<%= link_to 'Yes', new_current_bp_path %>
+		<p>Some blood pressure readings are overdue. You can enter these into your account now if you have made a note of them.</p>
+		<% if session[:average_bp_given] == nil %>
+			<p>It is important to take a pair of blood pressure readings every morning and evening for 4 days. This set of readings must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of whether your blood pressure is too high.</p>
+		<% end %>
+		<p>Do you have a pair of blood pressure readings from <%= @old_bp_datetime %> that you need to enter into your account?</p>
+		<%= link_to 'No', account_is_bp_set_completable_path(@bp_entry_datetime), method: :post %>
+		<%= link_to 'Yes', new_current_bp_path(@bp_entry_datetime) %>
 	<% end %>
 
 </div>
