--- a/app/views/current_bps/new2.html.erb
+++ b/app/views/current_bps/new2.html.erb
@@ -11,10 +11,10 @@
 	
 	<p>Thank you.</p>
 	
-	<% if old_bp_datetime == "" %>
+	<% if @old_bp_datetime == "" %>
 		<p>Please stay seated and relaxed for at least 1 minute, then take a second reading and enter it in the boxes below:</p>
 	<% else %>
-		<p>Please enter the second blood pressure reading from <%= old_bp_datetime %> into the boxes below:</p>
+		<p>Please enter the second blood pressure reading from <%= @old_bp_datetime %> into the boxes below:</p>
 	<% end %>
 
 	<div id='wizard_input_bp'>	
