--- a/app/views/current_bps/_form.html.erb
+++ b/app/views/current_bps/_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_for(@current_bp) do |f| %>
-	<%= f.hidden_field :date, {:value => @bp_entry_datetime[:date]} %>
-	<%= f.hidden_field :ampm, {:value => @bp_entry_datetime[:ampm]} %>
+	<%= f.hidden_field :date, {:value => @bp_entry_details[:date]} %>
+	<%= f.hidden_field :ampm, {:value => @bp_entry_details[:ampm]} %>
+	<%= f.hidden_field :reading_no, {:value => @bp_entry_details[:reading_no]} %>
 	<div id='input_bp_boxes'>
     	<%= f.text_field(:sysbp) %>
   		<div id='slash'>
@@ -12,7 +13,7 @@
   		</div>
   	</div>
   	
-  	<%= @bp_entry_datetime[:date]%>
+  	<%= @bp_entry_details[:date]%>
   	
   	<% if @current_bp.errors.any? %>
   		<div id='error_wrapper'>
@@ -23,7 +24,5 @@
   	<div id="submit">
 	   	<%= f.submit 'Next', :class => 'button6' %>
 	</div>
-	
-	<%= @bp_entry_datetime[:date]%>
 	
 <% end %>
