hidden datetime in URL v1

--- a/app/views/account/readings_due.html.erb
+++ b/app/views/account/readings_due.html.erb
@@ -15,8 +15,8 @@
 	<%= session[:date] %><br />
 	<%= session[:ampm] %><br />
 	<%= session[:average_bp_given] %><br />
-	<%= @bp_entry_details[:date] %><br />
-	<%= @bp_entry_details[:ampm] %>
+	<%= @bp_entry_details[:datetime] %><br />
+	
 	
 	<% if session[:average_bp_given] == 'yes' %>
 		<p>Thank you for entering your recent blood pressure readings.</p>
