--- a/app/assets/stylesheets/current_bps.css.scss
+++ b/app/assets/stylesheets/current_bps.css.scss
@@ -197,9 +197,8 @@ h1 {
       color: #ff0000;
     }
     
-    #right_side_boxes_container {
+    #right_side_boxes_container_long, #right_side_boxes_container_short {
       width: 200px;
-      height: 500px;
       margin: 0px 40px 20px 40px;
       float: right;
     
@@ -281,6 +280,14 @@ h1 {
           margin: 5px 0px 0px 50px;
         }
       }
+    }
+    
+    #right_side_boxes_container_long {
+      height: 500px;
+    } 
+    
+    #right_side_boxes_container_short {
+      height: 290px;
     }
   }
   
