--- a/app/views/account/home.html.erb
+++ b/app/views/account/home.html.erb
@@ -1,7 +1,11 @@
 <div id='main'>
 	<h1>Is my blood pressure too high?</h1>
 	
-	<div id='right_side_boxes_container'>
+	<% if user_signed_in? %>
+		<div id='right_side_boxes_container_long'>
+	<% else %>
+		<div id='right_side_boxes_container_short'>
+	<% end %>
 	<% if !@average_sysbp.nil? %>
 		<div id='average_bp'>
 			<%= render :partial => 'average_bp', :locals => {:avsys => @average_sysbp, :avdia => @average_diabp, :bppos => @bp_position} %>
@@ -17,17 +21,18 @@
 	<% if bp_warning_message(@current_average_bp) %>
 		<p id='warning_msg'><%= bp_warning_message(@current_average_bp) %></p>
 	<% end %>
-	
-	<% if user_signed_in? %>
-		<p class='big_notice'>Please come back to HomeBloodPressure.co.uk <span><%= when_next_bp_reading(@current_average_bp.ampm) %></span> to take another pair of blood pressure readings.</p>
-	<% end %>
+
 	
 	<% if !bp_warning_message(@current_average_bp) %>
 		<p><%= average_bp_message(@average_sysbp, @average_diabp) %></p>
 	<% end %>
 	
-	<p>...However, to get a more accurate picture of what your blood pressure is like you need to take more readings like this over the next 4 days. This is because your blood pressure will vary from hour to hour, so one or two readings can be misleading. By taking more readings, you will get more accurate advice from this site.</p>
+	<p>...However, to get a more accurate picture of what your blood pressure is like you need to take more readings like this <%= time_left %>. This is because your blood pressure will vary from hour to hour, so one or two readings can be misleading. By taking more readings, you will get more accurate advice from this site.</p>
 	<!--<p>Some illnesses may also affect what is considered to be a healthy blood pressure. After taking some readings you may need to answer more questions about your health. By doing this you will get more accurate, personalised advice.</p>-->
+	
+	<% if user_signed_in? %>
+		<p class='big_notice'>Please come back to HomeBloodPressure.co.uk <span><%= when_next_bp_reading(@current_average_bp.ampm) %></span> to take another pair of blood pressure readings.</p>
+	<% end %>
 	
 	<% if !user_signed_in? %>
 		<p>Sign up so you can check your blood pressure over the next 4 days.</p>
