--- a/app/views/account/readings_due.html.erb
+++ b/app/views/account/readings_due.html.erb
@@ -1,7 +1,7 @@
 <div id='main'>
 	<h1>Is my blood pressure too high?</h1>
 	
-	<div id='right_side_boxes_container'>
+	<div id='right_side_boxes_container_long'>
 	<% if !@average_sysbp.nil? %>
 		<div id='average_bp'>
 			<%= render :partial => 'average_bp', :locals => {:avsys => @average_sysbp, :avdia => @average_diabp, :bppos => @bp_position} %>
@@ -12,35 +12,31 @@
 	<% end %>
 	</div>
 	
-	<%= session[:date] %><br />
-	<%= session[:ampm] %><br />
-	<%= session[:average_bp_given] %><br />
-	<%= @bp_entry_details[:datetime] %><br />
-	<%= session[:bp_entry_details]%>
-	
 	<% if session[:average_bp_given] == 'yes' %>
 		<p>Thank you for entering your recent blood pressure readings.</p>
 	<% elsif session[:average_bp_given] == 'skipped' %>
-		<p>OK. It is important to try to take a pair of blood pressure readings every morning and evening for 4 days. Don't worry if you do miss some readings, but the set must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of your blood pressure so you will know if it is too high.</p>
+		<p>OK. It is important to try to take a pair of blood pressure readings every morning and evening for 4 days. Don't worry if you miss the occasional reading, but the set must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of your blood pressure so you will know if it is too high.</p>
 	<% else %>
-		<p>Welcome back <%= current_user.email %></p>
-		<p>It's time to take some more blood pressure readings. Taking a set of readings over several days will give you an accurate measure of your blood pressure. From an accurate measure you'll get reliable advice. That way you will know whether your blood pressure really is too high.</p>
+		<p><span>Welcome back <%= current_user.email %></span></p>
+		<p>It's time to record some more blood pressure readings. Taking a set of readings over several days will give you an accurate measure of your blood pressure. From an accurate measure you'll get reliable advice. That way you will know whether your blood pressure really is too high.</p>
 	<% end %>
 	
-	<% if @old_bp_datetime == "" && session[:average_bp_given] != nil %>
+	<% if old_bp_datetime_text == "" && session[:average_bp_given] != nil %>
 		<p>Now it's time to take an up to date pair of readings.</p>
 	<% end %>
 	
-	<% if @old_bp_datetime == "" %>
-		<%= link_to 'Next', new_current_bp_path(@bp_entry_details) %>
+	<% if old_bp_datetime_text == "" %>
+		<div id='next_button'>
+			<%= link_to 'Next', new_current_bp_path(@bp_entry_details), :class => 'button1 button2' %>
+		</div>
 	<% else %>
-		<p>Some blood pressure readings are overdue. You can enter these into your account now if you have made a note of them.</p>
-		<% if session[:average_bp_given] == nil %>
-			<p>It is important to take a pair of blood pressure readings every morning and evening for 4 days. This set of readings must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of whether your blood pressure is too high.</p>
-		<% end %>
-		<p>Do you have a pair of blood pressure readings from <%= @old_bp_datetime %> that you need to enter into your account?</p>
-		<%= link_to 'No', account_is_bp_set_completable_path(@bp_entry_details), method: :post %>
-		<%= link_to 'Yes', new_current_bp_path(@bp_entry_details) %>
+		<p>Do you have a pair of blood pressure readings from <span><%= old_bp_datetime_text %></span> that you need to enter into your account?</p>
+		<div id='no_button'>
+			<%= link_to 'No', account_is_bp_set_completable_path(@bp_entry_details), method: :post, :class => 'button1' %>
+		</div>
+		<div id='yes_button'>
+			<%= link_to 'Yes', new_current_bp_path(@bp_entry_details), :class => 'button1 button2' %>
+		</div>
 	<% end %>
 
 </div>
