--- a/app/views/current_bps/new.html.erb
+++ b/app/views/current_bps/new.html.erb
@@ -1,7 +1,7 @@
 <div id='main'>
 	<h1>Is my blood pressure too high?</h1>
 	
-	<div id='right_side_boxes_container'>
+	<div id='right_side_boxes_container_long'>
 	<% if !@average_sysbp.nil? %>
 		<div id='average_bp'>
 		<%= render :partial => 'account/average_bp', :locals => {:avsys => @average_sysbp, :avdia => @average_diabp, :bppos => @bp_position} %>
@@ -9,19 +9,19 @@
 	<% end %>
 	</div>
 	
-	<% if @bp_entry_details[:reading_no] == 1 %>
-		<% if @old_bp_datetime == "" %>
+	<% if @bp_entry_details[:reading_no] == '1' %>
+		<% if old_bp_datetime_text == "" %>
 			<p>Provide us with some blood pressure readings and we'll answer that question right away!</p><br />
 			<p>Whilst seated and relaxed, please take a blood pressure reading for us now and enter it in the boxes below:</p>
 		<% else %>
-			<p>Please enter the first blood pressure reading from <%= @old_bp_datetime %> into the boxes below:</p>
+			<p>Please enter the <span>first</span> blood pressure reading from <span><%= old_bp_datetime_text %></span> into the boxes below:</p>
 		<% end %>
 	<% else %>
 		<p>Thank you.</p>
-		<% if @old_bp_datetime == "" %>
+		<% if old_bp_datetime_text == "" %>
 			<p>Please stay seated and relaxed for at least 1 minute, then take a second reading and enter it in the boxes below:</p>
 		<% else %>
-			<p>Please enter the second blood pressure reading from <%= @old_bp_datetime %> into the boxes below:</p>
+			<p>Please enter the <span>second</span> blood pressure reading from <span><%= old_bp_datetime_text %></span> into the boxes below:</p>
 		<% end %>
 	<% end %>
 	
