work on back button behaviour

--- a/app/assets/stylesheets/account.css.scss
+++ b/app/assets/stylesheets/account.css.scss
@@ -9,8 +9,12 @@
       margin: 0px 20px 0px 240px;
     }
     
-    #next_button, #restart_button {
+    #next_button {
       margin-left: 300px;
+    }
+    
+    #restart_button {
+      margin: 0px 0px 20px 410px;
     }
     
     #right_side_boxes_container_long {
