--- a/app/views/account/restart_needed.html.erb
+++ b/app/views/account/restart_needed.html.erb
@@ -5,7 +5,7 @@
 		
 	<p>To get a reliable set of blood pressure readings you need to take a pair of readings each morning and evening for 4 days. This set of readings must span no more than 1 week.</p>
 	<p>Click the restart button to begin a new set of blood pressure readings.</p>
-	<div id='restart_button>
-		<%= link_to 'Restart', account_restart_path, method: :post, :class => 'button1 button2'%>		
+	<div id='restart_button'>
+		<%= link_to 'Restart', account_restart_path, method: :post, :class => 'button1 button2' %>		
 	</div>
 </div>
