--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,13 +53,15 @@
 	</div>
 	
 	<div id='topmenu'>
+		<% if user_signed_in? %>
+		<div class='topmenucontent'>
+			<%= link_to 'Account home', root_path %>
+		</div>
+		<div class='topmenucontent'>
+			<%= link_to 'Advice', blood_pressure_treatment_path %>
+		</div>
+		<% end %>
 		<!--
-		<div class='topmenucontent'>
-			<%= link_to 'Home', blood_pressure_treatment_path %>
-		</div>
-		<div class='topmenucontent'>
-			<a href=''>My account details</a>
-		</div>
 		<div class='topmenucontent'>
 			<a href=''>My medical details</a>
 		</div>
@@ -75,11 +77,13 @@
 		-->
 	</div>
 	
+	<!--
 	<% if user_signed_in? %>
 		<div id='breadcrumb'>
 			<%= breadcrumb %>
 		</div>
 	<% end %>
+	-->
 	
 	<div id='back'>
 		<%= link_to_function "Back", "history.back()" %>
