--- a/app/views/account/readings_due.html.erb
+++ b/app/views/account/readings_due.html.erb
@@ -12,16 +12,16 @@
 	<% end %>
 	</div>
 	
-	<% if session[:average_bp_given] == 'yes' %>
+	<% if @bp_entry_details[:bp_given] == 'yes' %>
 		<p>Thank you for entering your recent blood pressure readings.</p>
-	<% elsif session[:average_bp_given] == 'skipped' %>
+	<% elsif @bp_entry_details[:bp_given] == 'skipped' %>
 		<p>OK. It is important to try to take a pair of blood pressure readings every morning and evening for 4 days. Don't worry if you miss the occasional reading, but the set must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of your blood pressure so you will know if it is too high.</p>
 	<% else %>
 		<p><span>Welcome back <%= current_user.email %></span></p>
 		<p>It's time to record some more blood pressure readings. Taking a set of readings over several days will give you an accurate measure of your blood pressure. From an accurate measure you'll get reliable advice. That way you will know whether your blood pressure really is too high.</p>
 	<% end %>
 	
-	<% if old_bp_datetime_text == "" && session[:average_bp_given] != nil %>
+	<% if old_bp_datetime_text == "" && @bp_entry_details[:bp_given] != nil %>
 		<p>Now it's time to take an up to date pair of readings.</p>
 	<% end %>
 	
