--- a/app/views/admin/admin/menu.html.erb
+++ b/app/views/admin/admin/menu.html.erb
@@ -5,7 +5,7 @@
 	<%= link_to("Current BPs", admin_current_bps_path) %>
 		<p>A list of individual blood pressure readings. These are deleted after a full set has been taken. Readings can be edited or deleted.</p>
 	<%= link_to("Average BPs", admin_average_bps_path) %>
-		<p>A list of the average of each pair of readings. These are deleted after a full set has been taken. Readings can be edited or deleted.</p>
+		<p>A list of the average of each pair of readings. These are deleted after a full set has been taken. Readings can be edited or deleted. New readings can also be created for testing purposes.</p>
 	<%= link_to("Mail all users", new_admin_message_path) %>
 		<p>Send an email to all users. Be careful!!!</p>
 </div>
