--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -4,6 +4,7 @@ body {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  margin: 0px;
 }
 
 p, ol, ul, td {
@@ -78,9 +79,21 @@ a:hover {
   visibility: hidden;
 }
 
+#xcontainer {
+  font-family: arial, sans-serif;
+  font-size: 10pt;
+  width: 100%;
+}
+
 #header {
   position:relative;
   float:left;
+}
+
+#xheader {
+  width: 100%;
+  height: 70px;
+  background-color:#032F76;
 }
 
 #topbannertitle {
@@ -98,6 +111,20 @@ a:hover {
     }
   }
 }
+
+#xtopbannertitle {
+  
+  a {
+    font-size:20pt;
+    font-weight:bold;
+    
+    &:link, &:hover, &:visited {
+      color:#ffffff;
+      text-decoration:none;
+    }
+  }
+}
+
 
 #user_nav {
   float:left;
