--- a/app/views/layouts/old_admin.html.erb
+++ b/app/views/layouts/old_admin.html.erb
@@ -8,10 +8,13 @@
 </head>
 <body>
 
-<div id="xcontainer">
-
-	<div id='xheader'>
-		<div id='xtopbannertitle'>
+<div id="container">
+  <script>
+	autolayout();
+  </script>
+	<div id='header'>
+		<%= image_tag "topbanner.jpg" %>
+		<div id='topbannertitle'>
 			<%= link_to("HomeBloodPressure.co.uk", root_path) %>
 		</div>
 	</div>
