--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -90,6 +90,11 @@ a:hover {
   float:left;
 }
 
+#xheader_container {
+  padding: 8px;
+  background-color:#032F76;
+}
+
 #xheader {
   width: 100%;
   height: 70px;
@@ -113,7 +118,7 @@ a:hover {
 }
 
 #xtopbannertitle {
-  
+  float:left;
   a {
     font-size:20pt;
     font-weight:bold;
@@ -131,6 +136,26 @@ a:hover {
   position:absolute;
   top:15px;
   left:780px;
+  font-size:8pt;
+  #sign_in {
+    width: 70px;
+    float: left;
+  }
+  #sign_up {
+    width: 70px;
+    float: left;
+    margin-left: 12px;
+  }
+  #sign_out {
+    width: 90px;
+    margin: -5px 0px 0px 62px;
+    float: left;
+    line-height: 14px;
+  }
+}
+
+#xuser_nav {
+  float:right;
   font-size:8pt;
   #sign_in {
     width: 70px;
