--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -90,14 +90,9 @@ a:hover {
   float:left;
 }
 
-#xheader_container {
-  padding: 8px;
-  background-color:#032F76;
-}
-
 #xheader {
+  float: left;
   width: 100%;
-  height: 70px;
   background-color:#032F76;
 }
 
@@ -119,9 +114,9 @@ a:hover {
 
 #xtopbannertitle {
   float:left;
-  margin-bottom: 5px;
+  margin: 8px 0px 5px 8px;
   a {
-    font-size:20pt;
+    font-size:18pt;
     font-weight:bold;
     
     &:link, &:hover, &:visited {
@@ -159,7 +154,7 @@ a:hover {
   font-size:8pt;
   border-left: 1px solid #ffffff;
   padding-left: 15px;
-  margin-bottom: 5px;
+  margin: 8px 8px 5px 0px;
   #sign_in {
     width: 70px;
     float: left;
@@ -228,6 +223,7 @@ a.button2:hover {
 
 .button6 {
   font-size:12pt;
+  padding:7px 20px 7px 20px;
 }
 
 .button4, .button5 {
@@ -312,6 +308,7 @@ a.button2:hover {
   float:right;
   background-color:#032F76;
   padding: 5px 0px 15px 15px;
+  margin: 8px 0px 35px 0px;
   
   .topmenucontent {
     float:left;
