--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -62,5 +62,87 @@
   }
 }
 
-
+#xcontent {
+  #xmain {
+  
+    #strip1 {
+      width: 100%;
+      background-color: #ffffff;
+      float: left;
+    
+      #strip1_content {
+        width: 450px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-bottom: 30px;
+        
+      
+        h2 {
+          font-size:22pt;
+          color: #033076;
+          font-weight: normal;
+          margin: 20px 0px 0px 0px;
+        }
+      
+        h3, h4 {
+          font-size: 16pt;
+          font-weight: normal;
+          margin: 0px 0px 0px 30px;
+        }
+      
+        h3 {
+          color: #1464F6;
+          margin-top: 10px;
+        }
+      
+        h4 {
+          color: #3D8AF7;
+          margin-top: 3px;
+        }
+      }
+    }
+  
+    #strip2 {
+      width: 100%;
+      background-color: #D4E3FC;
+      float: left;
+      
+      #strip2_content {
+        width: 60%;
+        padding-right: 5%;
+        margin-left: auto;
+        margin-right: auto;
+        
+        h3 {
+          font-size:18pt;
+          color: #0844A4;
+          font-weight: normal;
+          padding: 20px 0px 0px 0px;
+          margin: 0px;
+        }
+        
+        p {
+          font-size:10pt;
+          color: #000000;
+          margin: 5px 0px 0px 15px;
+        }
+        
+        #input_bp {
+        margin: 10px 25px 20px 35px;
+        float: left;
+        
+          #input_bp_boxes {
+            float:left;
+            margin-bottom: 10px;
+          }
+        
+          #submit {
+            float:left;
+            margin: 0px 0px 20px 30px;
+          }
+        }
+      }
+    }
+  }
+}
 
